Fix scrollbars

--- a/src/components/weather/WeatherTable/style.css
+++ b/src/components/weather/WeatherTable/style.css
@@ -65,25 +65,25 @@
 
 /* Scroll bar */
 
-::-webkit-scrollbar {
+.columns ::-webkit-scrollbar {
     height: 20px;
     box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.3);
     border-radius: 10px;
-    background: #FFF;
+    background: var(--scrollbarBackground);
     transform: translateY(20px);
 }
 
-::-webkit-scrollbar-thumb {
+.columns ::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    background: #dbdbdb;
+    background: var(--scrollbarForeground);
 }
 
-::-webkit-scrollbar-thumb:hover {
+.columns ::-webkit-scrollbar-thumb:hover {
     border-radius: 10px;
-    background: #d1d1d1;
+    background: var(--scrollbarForegroundHover);
 }
 
-::-webkit-scrollbar-thumb:active {
+.columns ::-webkit-scrollbar-thumb:active {
     border-radius: 10px;
-    background: #b1b1b1;
+    background: var(--scrollbarForegroundActive);
 }
